[gd_scene load_steps=9 format=3 uid="uid://bc3gn5uh1lea"]

[ext_resource type="Script" path="res://Scripts/venn_controller.gd" id="1_y51jf"]
[ext_resource type="Texture2D" uid="uid://colcgoosgsmcx" path="res://Resources/Venn/left_ven.png" id="2_6cs38"]
[ext_resource type="Texture2D" uid="uid://dsyh2lu3p27hg" path="res://Resources/Venn/right_ven.png" id="3_timwq"]
[ext_resource type="Texture2D" uid="uid://cus05d3s3xgfr" path="res://Resources/Venn/top_venn.png" id="4_oiids"]
[ext_resource type="Texture2D" uid="uid://j4pk1u0ph7ek" path="res://Resources/Venn/intersection_bot.png" id="5_a1l0e"]
[ext_resource type="Texture2D" uid="uid://bmiqlqhaflvvh" path="res://Resources/Venn/intersection.png" id="6_8enhb"]
[ext_resource type="Texture2D" uid="uid://c5h6ldc5nnmif" path="res://Resources/Venn/right_intersect.png" id="7_2vmx5"]
[ext_resource type="Texture2D" uid="uid://d1mcvajxe67o8" path="res://Resources/Venn/center.png" id="8_w76lq"]

[node name="VennController" type="Node2D"]
position = Vector2(184, 112)
script = ExtResource("1_y51jf")

[node name="Left" type="Area2D" parent="."]
position = Vector2(-34, 25)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Left"]
position = Vector2(-4, 0)
polygon = PackedVector2Array(-11, -40, -11, -38, -13, -38, -13, -37, -15, -37, -15, -36, -17, -36, -17, -34, -19, -34, -19, -33, -20, -33, -20, -32, -21, -32, -21, -29, -23, -29, -23, -28, -24, -28, -24, -25, -27, -25, -27, -21, -28, -21, -28, -20, -29, -20, -29, -13, -31, -13, -31, -9, -32, -9, -32, 3, -31, 3, -31, 8, -29, 8, -29, 13, -28, 13, -28, 15, -27, 15, -27, 19, -25, 19, -25, 20, -24, 20, -24, 21, -23, 21, -23, 24, -21, 24, -21, 25, -20, 25, -20, 28, -17, 28, -17, 29, -16, 29, -16, 31, -13, 31, -13, 32, -12, 32, -12, 33, -11, 33, -11, 35, -7, 35, -7, 36, -5, 36, -5, 37, 0, 37, 0, 39, 5, 39, 5, 40, 17, 40, 17, 39, 21, 39, 21, 37, 28, 37, 28, 36, 29, 36, 29, 35, 32, 35, 32, 33, 31, 33, 31, 32, 30, 32, 30, 31, 27, 31, 27, 29, 26, 29, 26, 28, 23, 28, 23, 25, 22, 25, 22, 24, 20, 24, 20, 21, 19, 21, 19, 20, 18, 20, 18, 19, 16, 19, 16, 15, 15, 15, 15, 13, 14, 13, 14, 8, 12, 8, 12, 3, 11, 3, 11, -10, 10, -10, 10, -11, 9, -11, 9, -12, 6, -12, 6, -14, 5, -14, 5, -15, 2, -15, 2, -18, 1, -18, 1, -19, -1, -19, -1, -22, -2, -22, -2, -23, -3, -23, -3, -24, -5, -24, -5, -28, -6, -28, -6, -30, -7, -30, -7, -35, -9, -35, -9, -40)

[node name="Sprite2D" type="Sprite2D" parent="Left"]
position = Vector2(-4, 0)
texture = ExtResource("2_6cs38")

[node name="Right" type="Area2D" parent="."]
position = Vector2(37, 25)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Right"]
position = Vector2(4, 0)
polygon = PackedVector2Array(10.5, -40, 10.5, -35, 9.5, -35, 9.5, -32, 7.5, -32, 7.5, -30, 6.5, -30, 6.5, -26, 5.5, -26, 5.5, -24, 3.5, -24, 3.5, -22, 2.5, -22, 2.5, -20, 1.5, -20, 1.5, -18, -0.5, -18, -0.5, -16, -1.5, -16, -1.5, -15, -2.5, -15, -2.5, -14, -5.5, -14, -5.5, -12, -6.5, -12, -6.5, -11, -9.5, -11, -9.5, -8, -11.5, -8, -11.5, 8, -12.5, 8, -12.5, 11, -14.5, 11, -14.5, 13, -15.5, 13, -15.5, 17, -16.5, 17, -16.5, 19, -18.5, 19, -18.5, 21, -19.5, 21, -19.5, 23, -20.5, 23, -20.5, 25, -22.5, 25, -22.5, 27, -23.5, 27, -23.5, 28, -24.5, 28, -24.5, 29, -27.5, 29, -27.5, 31, -28.5, 31, -28.5, 32, -31.5, 32, -31.5, 35, -28.5, 35, -28.5, 36, -26.5, 36, -26.5, 37, -21.5, 37, -21.5, 39, -16.5, 39, -16.5, 40, -4.5, 40, -4.5, 39, -0.5, 39, -0.5, 37, 6.5, 37, 6.5, 36, 7.5, 36, 7.5, 35, 11.5, 35, 11.5, 32, 14.5, 32, 14.5, 31, 15.5, 31, 15.5, 29, 18.5, 29, 18.5, 28, 19.5, 28, 19.5, 27, 20.5, 27, 20.5, 25, 22.5, 25, 22.5, 23, 23.5, 23, 23.5, 21, 24.5, 21, 24.5, 19, 26.5, 19, 26.5, 17, 27.5, 17, 27.5, 13, 28.5, 13, 28.5, 11, 30.5, 11, 30.5, 8, 31.5, 8, 31.5, -13, 30.5, -13, 30.5, -16, 28.5, -16, 28.5, -20, 27.5, -20, 27.5, -22, 26.5, -22, 26.5, -25, 24.5, -25, 24.5, -28, 23.5, -28, 23.5, -29, 22.5, -29, 22.5, -32, 19.5, -32, 19.5, -33, 18.5, -33, 18.5, -36, 15.5, -36, 15.5, -37, 14.5, -37, 14.5, -38, 11.5, -38, 11.5, -40)

[node name="Sprite2D" type="Sprite2D" parent="Right"]
position = Vector2(4, 0)
texture = ExtResource("3_timwq")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, -48)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Top"]
polygon = PackedVector2Array(-10.5, -24, -10.5, -23, -13.5, -23, -13.5, -21, -15.5, -21, -15.5, -20, -19.5, -20, -19.5, -19, -21.5, -19, -21.5, -17, -23.5, -17, -23.5, -16, -25.5, -16, -25.5, -15, -27.5, -15, -27.5, -13, -29.5, -13, -29.5, -12, -30.5, -12, -30.5, -11, -31.5, -11, -31.5, -8, -33.5, -8, -33.5, -7, -34.5, -7, -34.5, -4, -37.5, -4, -37.5, 0, -38.5, 0, -38.5, 1, -39.5, 1, -39.5, 8, -41.5, 8, -41.5, 12, -42.5, 12, -42.5, 24, -41.5, 24, -41.5, 23, -37.5, 23, -37.5, 22, -35.5, 22, -35.5, 20, -32.5, 20, -32.5, 19, -11.5, 19, -11.5, 20, -8.5, 20, -8.5, 22, -4.5, 22, -4.5, 23, -2.5, 23, -2.5, 24, 1.5, 24, 1.5, 23, 5.5, 23, 5.5, 22, 7.5, 22, 7.5, 20, 10.5, 20, 10.5, 19, 31.5, 19, 31.5, 20, 34.5, 20, 34.5, 22, 38.5, 22, 38.5, 23, 40.5, 23, 40.5, 24, 42.5, 24, 42.5, 8, 41.5, 8, 41.5, 5, 39.5, 5, 39.5, 1, 38.5, 1, 38.5, -1, 37.5, -1, 37.5, -4, 35.5, -4, 35.5, -7, 34.5, -7, 34.5, -8, 33.5, -8, 33.5, -11, 30.5, -11, 30.5, -12, 29.5, -12, 29.5, -15, 26.5, -15, 26.5, -16, 25.5, -16, 25.5, -17, 22.5, -17, 22.5, -19, 19.5, -19, 19.5, -20, 17.5, -20, 17.5, -21, 13.5, -21, 13.5, -23, 10.5, -23, 10.5, -24)

[node name="Sprite2D" type="Sprite2D" parent="Top"]
texture = ExtResource("4_oiids")

[node name="LeftRightIntersect" type="Area2D" parent="."]
position = Vector2(1, 38)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftRightIntersect"]
polygon = PackedVector2Array(-21, -21.5, -21, -10.5, -20, -10.5, -20, -5.5, -18, -5.5, -18, -0.5, -17, -0.5, -17, 1.5, -16, 1.5, -16, 5.5, -14, 5.5, -14, 6.5, -13, 6.5, -13, 7.5, -12, 7.5, -12, 10.5, -10, 10.5, -10, 11.5, -9, 11.5, -9, 14.5, -6, 14.5, -6, 15.5, -5, 15.5, -5, 17.5, -2, 17.5, -2, 18.5, -1, 18.5, -1, 19.5, 0, 19.5, 0, 21.5, 1, 21.5, 1, 18.5, 4, 18.5, 4, 17.5, 5, 17.5, 5, 15.5, 8, 15.5, 8, 14.5, 9, 14.5, 9, 13.5, 10, 13.5, 10, 11.5, 12, 11.5, 12, 9.5, 13, 9.5, 13, 7.5, 14, 7.5, 14, 5.5, 16, 5.5, 16, 3.5, 17, 3.5, 17, -0.5, 18, -0.5, 18, -2.5, 20, -2.5, 20, -5.5, 21, -5.5, 21, -21.5, 19, -21.5, 19, -20.5, 18, -20.5, 18, -19.5, 11, -19.5, 11, -17.5, 7, -17.5, 7, -16.5, -5, -16.5, -5, -17.5, -10, -17.5, -10, -19.5, -15, -19.5, -15, -20.5, -17, -20.5, -17, -21.5)

[node name="Sprite2D" type="Sprite2D" parent="LeftRightIntersect"]
texture = ExtResource("5_a1l0e")

[node name="LeftTopIntersect" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftTopIntersect"]
position = Vector2(-23, -6)
polygon = PackedVector2Array(-11.5, -18, -11.5, -17, -14.5, -17, -14.5, -15, -16.5, -15, -16.5, -14, -20.5, -14, -20.5, -8, -18.5, -8, -18.5, -3, -17.5, -3, -17.5, -1, -16.5, -1, -16.5, 3, -14.5, 3, -14.5, 4, -13.5, 4, -13.5, 5, -12.5, 5, -12.5, 8, -10.5, 8, -10.5, 9, -9.5, 9, -9.5, 12, -6.5, 12, -6.5, 13, -5.5, 13, -5.5, 15, -2.5, 15, -2.5, 16, -1.5, 16, -1.5, 17, -0.5, 17, -0.5, 18, 0.5, 18, 0.5, 14, 2.5, 14, 2.5, 7, 3.5, 7, 3.5, 6, 4.5, 6, 4.5, 2, 7.5, 2, 7.5, -1, 8.5, -1, 8.5, -2, 10.5, -2, 10.5, -5, 11.5, -5, 11.5, -6, 12.5, -6, 12.5, -7, 14.5, -7, 14.5, -9, 16.5, -9, 16.5, -10, 18.5, -10, 18.5, -11, 20.5, -11, 20.5, -13, 18.5, -13, 18.5, -14, 16.5, -14, 16.5, -15, 12.5, -15, 12.5, -17, 9.5, -17, 9.5, -18)

[node name="Sprite2D" type="Sprite2D" parent="LeftTopIntersect"]
position = Vector2(-23, -6)
texture = ExtResource("6_8enhb")

[node name="RightTopIntersect" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightTopIntersect"]
position = Vector2(26, -6)
polygon = PackedVector2Array(-11, -18.5, -11, -17.5, -14, -17.5, -14, -15.5, -16, -15.5, -16, -14.5, -20, -14.5, -20, -13.5, -21, -13.5, -21, -11.5, -18, -11.5, -18, -10.5, -17, -10.5, -17, -9.5, -14, -9.5, -14, -6.5, -13, -6.5, -13, -5.5, -10, -5.5, -10, -2.5, -9, -2.5, -9, -1.5, -8, -1.5, -8, 1.5, -6, 1.5, -6, 4.5, -5, 4.5, -5, 6.5, -4, 6.5, -4, 10.5, -2, 10.5, -2, 13.5, -1, 13.5, -1, 18.5, 1, 18.5, 1, 15.5, 4, 15.5, 4, 14.5, 5, 14.5, 5, 12.5, 8, 12.5, 8, 11.5, 9, 11.5, 9, 10.5, 10, 10.5, 10, 8.5, 12, 8.5, 12, 6.5, 13, 6.5, 13, 4.5, 14, 4.5, 14, 2.5, 16, 2.5, 16, 0.5, 17, 0.5, 17, -3.5, 18, -3.5, 18, -5.5, 20, -5.5, 20, -8.5, 21, -8.5, 21, -13.5, 19, -13.5, 19, -14.5, 17, -14.5, 17, -15.5, 13, -15.5, 13, -17.5, 10, -17.5, 10, -18.5)

[node name="Sprite2D" type="Sprite2D" parent="RightTopIntersect"]
position = Vector2(26, -6)
texture = ExtResource("7_2vmx5")

[node name="Center" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Center"]
polygon = PackedVector2Array(0, -18.5, 0, -16.5, -2, -16.5, -2, -15.5, -4, -15.5, -4, -14.5, -6, -14.5, -6, -12.5, -8, -12.5, -8, -11.5, -9, -11.5, -9, -10.5, -10, -10.5, -10, -7.5, -12, -7.5, -12, -6.5, -13, -6.5, -13, -3.5, -16, -3.5, -16, 0.5, -17, 0.5, -17, 1.5, -18, 1.5, -18, 8.5, -20, 8.5, -20, 12.5, -21, 12.5, -21, 13.5, -17, 13.5, -17, 14.5, -15, 14.5, -15, 15.5, -10, 15.5, -10, 17.5, -5, 17.5, -5, 18.5, 7, 18.5, 7, 17.5, 11, 17.5, 11, 15.5, 18, 15.5, 18, 14.5, 19, 14.5, 19, 13.5, 21, 13.5, 21, 8.5, 20, 8.5, 20, 5.5, 18, 5.5, 18, 1.5, 17, 1.5, 17, -0.5, 16, -0.5, 16, -3.5, 14, -3.5, 14, -6.5, 13, -6.5, 13, -7.5, 12, -7.5, 12, -10.5, 9, -10.5, 9, -11.5, 8, -11.5, 8, -14.5, 5, -14.5, 5, -15.5, 4, -15.5, 4, -16.5, 1, -16.5, 1, -18.5)

[node name="Sprite2D" type="Sprite2D" parent="Center"]
texture = ExtResource("8_w76lq")

[connection signal="mouse_entered" from="Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="Left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="Right" to="." method="_on_right_mouse_exited"]
[connection signal="mouse_entered" from="Top" to="." method="_on_bottom_mouse_entered"]
[connection signal="mouse_exited" from="Top" to="." method="_on_bottom_mouse_exited"]
[connection signal="mouse_entered" from="LeftRightIntersect" to="." method="_on_left_right_intersect_mouse_entered"]
[connection signal="mouse_exited" from="LeftRightIntersect" to="." method="_on_left_right_intersect_mouse_exited"]
[connection signal="mouse_entered" from="LeftTopIntersect" to="." method="_on_left_bot_intersect_mouse_entered"]
[connection signal="mouse_exited" from="LeftTopIntersect" to="." method="_on_left_bot_intersect_mouse_exited"]
[connection signal="mouse_entered" from="RightTopIntersect" to="." method="_on_right_bot_intersect_mouse_entered"]
[connection signal="mouse_exited" from="RightTopIntersect" to="." method="_on_right_bot_intersect_mouse_exited"]
[connection signal="mouse_entered" from="Center" to="." method="_on_center_mouse_entered"]
[connection signal="mouse_exited" from="Center" to="." method="_on_center_mouse_exited"]
